<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:minWidth="350dp"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog"

    android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/txtWarring"
                android:layout_width="0dp"
                android:layout_height="20sp"
                android:layout_weight="0.8"
                android:text="@string/show_bat_ngo"
                android:textColor="#e91e63" />

            <TextView
                android:id="@+id/txtCountCharecter"
                android:layout_width="0dp"
                android:layout_height="20sp"
                android:layout_weight="0.2"
                android:gravity="end"
                android:paddingRight="5dp"
                android:text="" />
        </LinearLayout>


        <MultiAutoCompleteTextView
            android:id="@+id/edtMess"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="bottom"
            android:completionThreshold="1"
            android:gravity="bottom"
            android:hint="@string/input_mess"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:textSize="15sp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_vidu"
            android:textColor="#0de46a" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="0">

            <Button
                android:id="@+id/btnOKMess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ok" />

            <Button
                android:id="@+id/btnHuyMess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_huy" />
        </LinearLayout>


</LinearLayout>