<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".ListKyNiem">

    <Toolbar

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4acc8d"
        android:gravity="center"
        android:textAlignment="center">
        !-- #e91e63 - 4acc8d


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/imbBackKyNiem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.2"
                android:background="@null"
                android:onClick="Click"
                android:src="@mipmap/icback" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_weight="0.6"
                android:text="@string/ky_niem"
                android:textColor="@color/mauTrang"
                android:textSize="20sp" />

            <Button
                android:textColor="#4acc8d"
                android:id="@+id/btnAddKyNiem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.2"
                android:onClick="Click"
                android:text="@string/btn_luu" />
        </LinearLayout>
    </Toolbar>
<LinearLayout
    android:orientation="vertical"
    android:weightSum="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListView
        android:layout_weight="0.9"
        android:id="@+id/listKyNiem"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </ListView>

    <com.google.android.gms.ads.AdView
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/baner_qc">
    </com.google.android.gms.ads.AdView>
</LinearLayout>

</LinearLayout>
