<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:minWidth="350dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:textColor="#e78787"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_them_ky_niem"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tipNgayKyNiem"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3">

            <EditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:hint="@string/ngay_ky_niem"
                android:inputType="date"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:orientation="horizontal"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tipGhiChu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8">

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:hint="@string/ghi_chu"

                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical"
                android:weightSum="1">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageKyNiem"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"

                    android:src="@drawable/tim" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="Click here" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnOK_KyNiem"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_weight="0.2"
            android:text="OK" />
    </LinearLayout>
</LinearLayout>